2010-02-04
- Fixed SSSE3 blitter (OPERATOR_SRC_OVER)

2010-02-02
- Fixed some warnings.

2010-02-01
- Fixed issue 9 - sincosf() and sincos() are not availble under Mac OS X
  with GCC 4.2. GNU extension.

2010-01-24
- Added few SSSE3 alpha-blending functions (currently this is only used
  to experiment with new instructions).
- SSE2 SRC_OVER code for single pixel is now faster.
- Click events are now send only if user released button under the widget.
- Added X11 engine explicit initialization mode.
- Fixed some double-buffering stuff.
- Fixed Region::subtract(Region, Rect) method.

2010-01-21
- Refactorized SSE2 code, naming conventions and constants

2010-01-20
- Added rgb16_from_xrgb32 conversion using SSE2.
- Added rgb16_from_xrgb32 conversion using MMX.
- Fixed double to string conversion (both, String and ByteArray).

2010-01-19
- SRC and SRC_OVER operators were optimized in pure C backend.
- Fixed minor build issues (added INT_MIN, INT_MAX, ...).
- Fixed X11 backend when using different bit-depth than 32.
- Fixed PathUtil.cpp code.

2010-01-18
- Added operator characteristics, will be used later by raster paint engine.
- Refactorized and rewritten Fog::ByteUtil.
- Rasterizer, Scanline, DitherMatrix classes are not exported from now.
- Added _p suffix to header files that won't be installed (and can't be used by apps).
- Added 32-bit C code for image compositing (Now Fog library can be
  used by any 32/64-bit architecture).
- Added OPERATOR_MULTIPLY
- Rewritten paths and path storage. Path is now stored as array of commands
  and array of vertices, this allows to simplify path transformation methods,
  rasterizer, and it's also better for memory usage (because command is now 
  only uint8_t).
- Path::add... methods now supports direction argument that can be used to
  set the direction of object being added.

2010-01-14
- Improved performance of blitImage() when using affine transformations and subpixel
  placement (see new code ImageAffineBound).