@@ -1,0 +1,5 @@
+mkdir ..\Build
+cd ..\Build
+cmake .. -DCMAKE_BUILD_TYPE=Release -G"Visual Studio 6"
+cd ..\Scripts
+pause
