@@ -1,5 +1,5 @@
-mkdir Build
-cd Build
+mkdir ..\Build
+cd ..\Build
 cmake .. -DCMAKE_BUILD_TYPE=Release -DFOG_BUILD_BENCH=True -G"Visual Studio 8 2005"
-cd ..
+cd ..\Scripts
 pause
