@@ -1,0 +1,4 @@
+#/bin/sh
+cd ../Build
+su -c "make install"
+cd ../Scripts
