@@ -1,5 +1,9 @@
+2010-02-12
+- Fixed compilation issues in Win32 and 32-bit Linux.
+- Added all configure scripts to Scripts directory.
+
 2010-02-04
-- Fixed SSSE3 blitter (OPERATOR_SRC_OVER)
+- Fixed SSSE3 blitter (OPERATOR_SRC_OVER).
 
 2010-02-02
 - Fixed some warnings.
